--- a/src/styles.css
+++ b/src/styles.css
@@ -32,23 +32,35 @@ body {
   color: #ffffff;
 }
 
+/* Make header draggabale */
+#header {
+  -webkit-app-region:drag;
+}
+
+#header input[type="submit"],
+input[type="reset"],
+input[type="button"],
+input[type="text"],
+button,
+a,
+textarea {
+  -webkit-app-region:no-drag;
+}
+
 /* Debugging Layouts
 @media screen and (min-width: 64.063em) {
   .ui-lg-3 {
     background-color: green;
   }
 }
-
 @media screen and (min-width: 40.063em) {
   .ui-md-6 {
     background-color: yellow;
   }
 }
-
 @media screen and (max-width: 40em) {
   .ui-sm-12 {
     background-color: palevioletred;
   }
 }
 */
-
